Crop logo image whitespace Fixes #8

--- a/styles.css
+++ b/styles.css
@@ -38,18 +38,16 @@ header {
 }
 
 .logo {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
   width: fit-content;
   height: 100%;
 }
 
 .logo img {
-  width: 336px;
-  height: 37px;
+  object-fit: contain; /* The aspect ratio must be preserved */
+  object-position: -11px; /* With height of 36px, whitespace is 22px */
+
+  width: fit-content;
+  height: 100%;
 }
 
 nav {
@@ -95,9 +93,13 @@ nav li {
   }
 
   .logo {
+    display: flex; /* It's a header row, not just logo container */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;  
     padding: 8px 16px; /* Mirroring desktop header */
 
-    width: 100%; /* .logo acts as header row, not just logo container */
+    width: 100%;
     height: 53px; /* Header rows have identical fixed length */
 
     border-bottom: 1px solid black;
